--- a/Client/Containers/ContainerSettings.razor
+++ b/Client/Containers/ContainerSettings.razor
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row mb-1 align-items-center">
-        <Label Class="col-sm-3" For="title" ResourceKey="Title" ResourceType="@resourceType" HelpText="Specify If The Module Title Should Be Displayed">Display Title?</Label>
+        <Label Class="col-sm-3" For="title" ResourceKey="Title" ResourceType="@ThemeInfo.ContainerSettingsType" HelpText="Specify If The Module Title Should Be Displayed">Display Title?</Label>
         <div class="col-sm-9">
             <select id="title" class="form-select" @bind="@_title">
                 <option value="true">Yes</option>
@@ -17,7 +17,6 @@
 </div>
 
 @code {
-	private string resourceType = ThemeInfo.Static.ContainerSettingsType; // for localization
     private string _title = "true";
 
     protected override void OnInitialized()
