--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -40,8 +40,7 @@
             var siteSettings = await MySettings.GetSite(PageState.Site.SiteId);
             var pageSettings = await MySettings.GetPage(_pageId);
 
-            var current = _scopeIsPage ? pageSettings : siteSettings;
-            _editor.Manager = current;
+            _editor.Manager = _scopeIsPage ? pageSettings : siteSettings;
             _siteSettings = siteSettings;
 
             await Task.Yield();
@@ -63,7 +62,7 @@
     /// Handle the save action for the settings. Will be called by the Oqtane framework.
     /// </summary>
     public async Task UpdateSettings()
-        => await RazorUtils.RunAsyncAndLogErrors(() => _editor!.Save(), this, logger);
+        => await RazorUtils.RunAsyncAndLogErrors(() => _editor.Save(KeyPrefix), this, logger);
 }
 
 <div class="container">
@@ -82,7 +81,6 @@
     </div>
 
     @* Enable Login *@
-    <text>Exp!</text>
     <div class="row mb-1 align-items-center">
         <Label Class="col-sm-3" For="login" ResourceKey="Login" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if a Login option should be displayed. Note that this option does not prevent the login page from being accessible via a direct url.">Show Login?</Label>
         <div class="col-sm-9">
