--- a/Client/Themes/Default.razor
+++ b/Client/Themes/Default.razor
@@ -1,4 +1,5 @@
 @namespace ToSic.Cre8magic.Theme.Basic
+@using ToSic.Cre8magic.Theme.Basic.Settings
 @using ToSic.Cre8magic.Theme.Basic.Utils
 @using static ToSic.Cre8magic.Theme.Basic.Constants
 @inherits ThemeBase
