--- a/Client/Themes/Centered.razor
+++ b/Client/Themes/Centered.razor
@@ -3,6 +3,7 @@
 
 @code {
     public override string Name => "Centered";
+    public override string Panes => PaneNames.Default + ",Header";
 }
 
 <Default Variant="centered"></Default>
