--- a/Client/Themes/Fullscreen.razor
+++ b/Client/Themes/Fullscreen.razor
@@ -3,6 +3,7 @@
 
 @code {
     public override string Name => "Fullscreen";
+    public override string Panes => PaneNames.Default + ",Header";
 }
 
 <Default Variant="fullscreen"></Default>
