--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -20,7 +20,7 @@
     /// <summary>
     /// If we should show the title above the module; initialized in OnParametersSet; default is `false`.
     /// </summary>
-    private bool ShowTitle => Settings.Bool(ThemeConstants.KeyShowTitle, false) && !string.IsNullOrEmpty(ModuleState.Title);
+    private bool ShowTitle => Settings.Bool(ThemeInfo.KeyShowTitle, false) && !string.IsNullOrEmpty(ModuleState.Title);
 }
 
 <div class="container py-4">
