--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -60,7 +60,7 @@
     /// Handle the save action for the settings. Will be called by the Oqtane framework.
     /// </summary>
     public async Task UpdateSettings()
-        => await RazorUtils.RunAsyncAndLogErrors(() => _editor.Save(KeyPrefix), this, logger);
+        => await RazorUtils.RunAsyncAndLogErrors(() => _editor.Save(ThemeInfo.KeyPrefix), this, logger);
 }
 
 <div class="container">
@@ -82,14 +82,14 @@
     <div class="row mb-1 align-items-center">
         <Label Class="col-sm-3" For="login" ResourceKey="Login" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if a Login option should be displayed. Note that this option does not prevent the login page from being accessible via a direct url.">Show Login?</Label>
         <div class="col-sm-9">
-            <select id="login" class="form-select" @bind="@_editor[KeyLogin].Value">
+            <select id="login" class="form-select" @bind="@_editor[ThemeInfo.KeyLogin].Value">
                 <option value="">&lt;@SharedLocalizer["Not Specified"]&gt;</option>
                 <option value="true">@SharedLocalizer["Yes"]</option>
                 <option value="false">@SharedLocalizer["No"]</option>
             </select>
-            @if (_editor.ShowFallback(KeyLogin))
+            @if (_editor.ShowFallback(ThemeInfo.KeyLogin))
             {
-                <div class="small text-muted">Site Default (if not set): @(_editor.Fallback.Get(KeyLogin))</div>
+                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(ThemeInfo.KeyLogin)</div>
             }
         </div>
     </div>
@@ -98,14 +98,14 @@
     <div class="row mb-1 align-items-center">
         <Label Class="col-sm-3" For="register" ResourceKey="Register" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if a Register option should be displayed. Note that this option is also dependent on the Allow Registration option in Site Settings.">Show Register?</Label>
         <div class="col-sm-9">
-            <select id="register" class="form-select" @bind="@_editor[KeyRegister].Value">
+            <select id="register" class="form-select" @bind="@_editor[ThemeInfo.KeyRegister].Value">
                 <option value="">&lt;@SharedLocalizer["Not Specified"]&gt;</option>
                 <option value="true">@SharedLocalizer["Yes"]</option>
                 <option value="false">@SharedLocalizer["No"]</option>
             </select>
-            @if (_editor.ShowFallback(KeyRegister))
+            @if (_editor.ShowFallback(ThemeInfo.KeyRegister))
             {
-                <div class="small text-muted">Site Default (if not set): @(_editor.Fallback.Get(KeyRegister))</div>
+                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(ThemeInfo.KeyRegister)</div>
             }
         </div>
     </div>
@@ -123,17 +123,17 @@
                     <div class="row mb-1 align-items-center">
                         <div class="col-sm-3">
                             <Label For="footerHtml" ResourceKey="FooterHtml" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Here you can insert your own HTML code for the footer">Footer HTML:</Label>
-                            <button type="button" class="btn btn-secondary ms-2" @onclick="() => _editor[KeyFooterHtml].Value = DefaultFooterHtml">
+                            <button type="button" class="btn btn-secondary ms-2" @onclick="() => _editor[ThemeInfo.KeyFooterHtml].Value = ThemeInfo.DefaultFooterHtml">
                                 @SharedLocalizer["Show Default"]
                             </button>
                         </div>
                         <div class="col-sm-9">
-                            <textarea id="footerHtml" class="form-control" @bind="@_editor[KeyFooterHtml].Value" rows="4"></textarea>
-                            @if (_editor.ShowFallback(KeyFooterHtml))
+                            <textarea id="footerHtml" class="form-control" @bind="@_editor[ThemeInfo.KeyFooterHtml].Value" rows="4"></textarea>
+                            @if (_editor.ShowFallback(ThemeInfo.KeyFooterHtml))
                             {
                                 <div class="small text-muted">
                                     Site Default (if not set): <br />
-                                    <pre>@(_editor.Fallback.Get(KeyFooterHtml))</pre>
+                                    <pre>@_editor.Fallback.Get(ThemeInfo.KeyFooterHtml)</pre>
                                 </div>
                             }
                         </div>
@@ -156,12 +156,12 @@
                     <div class="row mb-1 align-items-center">
                         <Label class="col-sm-3" For="themeCss" ResourceKey="ThemeCss" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Here you can insert your own Theme CSS.">Theme Color:</Label>
                         <div class="col-sm-9">
-                            <textarea id="themeCss" class="form-control" @bind="_editor[KeyThemeCss].Value" rows="2"></textarea>
-                            @if (_editor.ShowFallback(KeyThemeCss))
+                            <textarea id="themeCss" class="form-control" @bind="_editor[ThemeInfo.KeyThemeCss].Value" rows="2"></textarea>
+                            @if (_editor.ShowFallback(ThemeInfo.KeyThemeCss))
                             {
                                 <div class="small text-muted">
                                     Site Default (if not set): <br />
-                                    <pre>@(_editor.Fallback.Get(KeyThemeCss))</pre>
+                                    <pre>@_editor.Fallback.Get(ThemeInfo.KeyThemeCss)</pre>
                                 </div>
                             }
                         </div>
