--- a/Client/Containers/ContainerSettings.razor
+++ b/Client/Containers/ContainerSettings.razor
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row mb-1 align-items-center">
-        <Label Class="col-sm-3" For="title" ResourceKey="Title" ResourceType="@ThemeInfo.ContainerSettingsType" HelpText="Specify If The Module Title Should Be Displayed">Display Title?</Label>
+        <Label Class="col-sm-3" For="title" ResourceKey="Title" ResourceType="@ContainerSettingsType" HelpText="Specify If The Module Title Should Be Displayed">Display Title?</Label>
         <div class="col-sm-9">
             <select id="title" class="form-select" @bind="@_title">
                 <option value="true">Yes</option>
@@ -24,7 +24,7 @@
         try
         {
 
-            _title = SettingService.GetSetting(ModuleState.Settings, ThemeInfo.KeyShowTitle, "true");
+            _title = SettingService.GetSetting(ModuleState.Settings, KeyShowTitle, "true");
 
         }
         catch (Exception ex)
@@ -38,7 +38,7 @@
         try
         {
 			var settings = await SettingService.GetModuleSettingsAsync(ModuleState.ModuleId);
-            settings = SettingService.SetSetting(settings, ThemeInfo.KeyShowTitle, _title);
+            settings = SettingService.SetSetting(settings, KeyShowTitle, _title);
             await SettingService.UpdateModuleSettingsAsync(settings, ModuleState.ModuleId);
         }
         catch (Exception ex)
