--- a/Client/Themes/Default.razor
+++ b/Client/Themes/Default.razor
@@ -1,7 +1,4 @@
 @namespace ToSic.Cre8magic.Theme.Basic
-@using ToSic.Cre8magic.Theme.Basic.Settings
-@using ToSic.Cre8magic.Theme.Basic.Utils
-@using static ToSic.Cre8magic.Theme.Basic.ThemeConstants
 @inherits ThemeBase
 @inject OqtaneSettings OqtaneSettings
 
@@ -23,7 +20,7 @@
 }
 
 @* Add custom Css rules if provided in the page/site settings *@
-@if (_settings.TryGet(ThemeInfo.KeyThemeCss, out var themeCss)) {
+@if (_settings.TryGet(KeyThemeCss, out var themeCss)) {
     <style>
         @((MarkupString)themeCss)
     </style>
@@ -35,8 +32,8 @@
         <Logo /><Menu Orientation="Horizontal" />
         <div class="controls ms-auto">
             <div class="controls-group">
-                <UserProfile ShowRegister="@_settings.Bool(ThemeInfo.KeyRegister, true)" />
-                <Login ShowLogin="@_settings.Bool(ThemeInfo.KeyLogin, true)"  />
+                <UserProfile ShowRegister="@_settings.Bool(KeyRegister, true)" />
+                <Login ShowLogin="@_settings.Bool(KeyLogin, true)"  />
                 <ControlPanel ButtonClass="btn-outline-light" />
             </div>
         </div>
@@ -51,7 +48,7 @@
     </main>
 
     <footer id="theme-page-footer" class="footer">
-        @((MarkupString)_settings.Get(ThemeInfo.KeyFooterHtml, ThemeInfo.DefaultFooterHtml))
+        @((MarkupString)_settings.Get(KeyFooterHtml, DefaultFooterHtml))
     </footer>
 
 </div>
