--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -1,9 +1,6 @@
 @namespace ToSic.Cre8magic.Theme.Basic
 @inherits ModuleBase
 @implements Oqtane.Interfaces.ISettingsControl
-@using ToSic.Cre8magic.Theme.Basic.Settings
-@using ToSic.Cre8magic.Theme.Basic.Utils
-@using static ToSic.Cre8magic.Theme.Basic.ThemeConstants
 @inject OqtaneSettings OqtaneSettings
 @inject IStringLocalizer<ThemeSettings> Localizer
 @inject IStringLocalizer<SharedResources> SharedLocalizer
@@ -60,13 +57,13 @@
     /// Handle the save action for the settings. Will be called by the Oqtane framework.
     /// </summary>
     public async Task UpdateSettings()
-        => await RazorUtils.RunAsyncAndLogErrors(() => _editor.Save(ThemeInfo.KeyPrefix), this, logger);
+        => await RazorUtils.RunAsyncAndLogErrors(() => _editor.Save(KeyPrefix), this, logger);
 }
 
 <div class="container">
     @* Choose Scope Site / Page - affects remaining fields *@
     <div class="row mb-1 align-items-center">
-        <Label Class="col-sm-3" For="scope" ResourceKey="Scope" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if the settings are applicable to this page or the entire site.">Setting Scope:</Label>
+        <Label Class="col-sm-3" For="scope" ResourceKey="Scope" ResourceType="@ThemeSettingsType" HelpText="Specify if the settings are applicable to this page or the entire site.">Setting Scope:</Label>
         <div class="col-sm-9">
             <select id="scope" class="form-select" value="@_scope" @onchange="ScopeChanged">
                 @if (UserSecurity.IsAuthorized(PageState.User, RoleNames.Admin))
@@ -80,32 +77,32 @@
 
     @* Enable Login *@
     <div class="row mb-1 align-items-center">
-        <Label Class="col-sm-3" For="login" ResourceKey="Login" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if a Login option should be displayed. Note that this option does not prevent the login page from being accessible via a direct url.">Show Login?</Label>
+        <Label Class="col-sm-3" For="login" ResourceKey="Login" ResourceType="@ThemeSettingsType" HelpText="Specify if a Login option should be displayed. Note that this option does not prevent the login page from being accessible via a direct url.">Show Login?</Label>
         <div class="col-sm-9">
-            <select id="login" class="form-select" @bind="@_editor[ThemeInfo.KeyLogin].Value">
+            <select id="login" class="form-select" @bind="@_editor[KeyLogin].Value">
                 <option value="">&lt;@SharedLocalizer["Not Specified"]&gt;</option>
                 <option value="true">@SharedLocalizer["Yes"]</option>
                 <option value="false">@SharedLocalizer["No"]</option>
             </select>
-            @if (_editor.ShowFallback(ThemeInfo.KeyLogin))
+            @if (_editor.ShowFallback(KeyLogin))
             {
-                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(ThemeInfo.KeyLogin)</div>
+                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(KeyLogin)</div>
             }
         </div>
     </div>
 
     @* Enable Register *@
     <div class="row mb-1 align-items-center">
-        <Label Class="col-sm-3" For="register" ResourceKey="Register" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Specify if a Register option should be displayed. Note that this option is also dependent on the Allow Registration option in Site Settings.">Show Register?</Label>
+        <Label Class="col-sm-3" For="register" ResourceKey="Register" ResourceType="@ThemeSettingsType" HelpText="Specify if a Register option should be displayed. Note that this option is also dependent on the Allow Registration option in Site Settings.">Show Register?</Label>
         <div class="col-sm-9">
-            <select id="register" class="form-select" @bind="@_editor[ThemeInfo.KeyRegister].Value">
+            <select id="register" class="form-select" @bind="@_editor[KeyRegister].Value">
                 <option value="">&lt;@SharedLocalizer["Not Specified"]&gt;</option>
                 <option value="true">@SharedLocalizer["Yes"]</option>
                 <option value="false">@SharedLocalizer["No"]</option>
             </select>
-            @if (_editor.ShowFallback(ThemeInfo.KeyRegister))
+            @if (_editor.ShowFallback(KeyRegister))
             {
-                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(ThemeInfo.KeyRegister)</div>
+                <div class="small text-muted">Site Default (if not set): @_editor.Fallback.Get(KeyRegister)</div>
             }
         </div>
     </div>
@@ -122,18 +119,18 @@
                 <div class="accordion-body">
                     <div class="row mb-1 align-items-center">
                         <div class="col-sm-3">
-                            <Label For="footerHtml" ResourceKey="FooterHtml" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Here you can insert your own HTML code for the footer">Footer HTML:</Label>
-                            <button type="button" class="btn btn-secondary ms-2" @onclick="() => _editor[ThemeInfo.KeyFooterHtml].Value = ThemeInfo.DefaultFooterHtml">
+                            <Label For="footerHtml" ResourceKey="FooterHtml" ResourceType="@ThemeSettingsType" HelpText="Here you can insert your own HTML code for the footer">Footer HTML:</Label>
+                            <button type="button" class="btn btn-secondary ms-2" @onclick="() => _editor[KeyFooterHtml].Value = DefaultFooterHtml">
                                 @SharedLocalizer["Show Default"]
                             </button>
                         </div>
                         <div class="col-sm-9">
-                            <textarea id="footerHtml" class="form-control" @bind="@_editor[ThemeInfo.KeyFooterHtml].Value" rows="4"></textarea>
-                            @if (_editor.ShowFallback(ThemeInfo.KeyFooterHtml))
+                            <textarea id="footerHtml" class="form-control" @bind="@_editor[KeyFooterHtml].Value" rows="4"></textarea>
+                            @if (_editor.ShowFallback(KeyFooterHtml))
                             {
                                 <div class="small text-muted">
                                     Site Default (if not set): <br />
-                                    <pre>@_editor.Fallback.Get(ThemeInfo.KeyFooterHtml)</pre>
+                                    <pre>@_editor.Fallback.Get(KeyFooterHtml)</pre>
                                 </div>
                             }
                         </div>
@@ -154,14 +151,14 @@
             <div id="collapseThemeColor" class="accordion-collapse collapse" aria-labelledby="headingThemeColor" data-bs-parent="#themeColorAccordion">
                 <div class="accordion-body">
                     <div class="row mb-1 align-items-center">
-                        <Label class="col-sm-3" For="themeCss" ResourceKey="ThemeCss" ResourceType="@ThemeInfo.ThemeSettingsType" HelpText="Here you can insert your own Theme CSS.">Theme Color:</Label>
+                        <Label class="col-sm-3" For="themeCss" ResourceKey="ThemeCss" ResourceType="@ThemeSettingsType" HelpText="Here you can insert your own Theme CSS.">Theme Color:</Label>
                         <div class="col-sm-9">
-                            <textarea id="themeCss" class="form-control" @bind="_editor[ThemeInfo.KeyThemeCss].Value" rows="2"></textarea>
-                            @if (_editor.ShowFallback(ThemeInfo.KeyThemeCss))
+                            <textarea id="themeCss" class="form-control" @bind="_editor[KeyThemeCss].Value" rows="2"></textarea>
+                            @if (_editor.ShowFallback(KeyThemeCss))
                             {
                                 <div class="small text-muted">
                                     Site Default (if not set): <br />
-                                    <pre>@_editor.Fallback.Get(ThemeInfo.KeyThemeCss)</pre>
+                                    <pre>@_editor.Fallback.Get(KeyThemeCss)</pre>
                                 </div>
                             }
                         </div>
