Rename default container to "Default"

--- a/Client/Containers/Container-Default.razor
+++ b/Client/Containers/Container-Default.razor
@@ -10,7 +10,7 @@
     /// <summary>
     /// Name of this container to be used in the UI
     /// </summary>
-    public override string Name => "Cre8magic Basic - Container (default)";
+    public override string Name => "Cre8magic Basic - Default";
 
     [field: AllowNull, MaybeNull]
     private SettingsReader Settings => field ??= OqtaneSettings.GetModule(ModuleState);
