--- a/Client/Containers/Container-Header.razor
+++ b/Client/Containers/Container-Header.razor
@@ -10,7 +10,7 @@
     /// <summary>
     /// Name of this container to be used in the UI
     /// </summary>
-    public override string Name => "Cre8magic Basic - Header";
+    public override string Name => "Header Container (reduced padding)";
 }
 
 <ModuleActions />
